WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28484
Plug-in-related leaks seen on the build bot
https://bugs.webkit.org/show_bug.cgi?id=28484
Summary
Plug-in-related leaks seen on the build bot
Mark Rowe (bdash)
Reported
2009-08-19 23:07:54 PDT
<
http://build.webkit.org/results/SnowLeopard%20Intel%20Leaks/r47547%20(36)/DumpRenderTree2-leaks.txt
> shows an instance of WebKit::HostedNetscapePluginStream and related data being leaked. It appears to happen during plugins/return-error-from-new-stream-callback-in-full-frame-plugin.html.
Attachments
Patch
(7.35 KB, patch)
2009-08-19 23:18 PDT
,
Mark Rowe (bdash)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-08-19 23:08:17 PDT
<
rdar://problem/7156355
>
Mark Rowe (bdash)
Comment 2
2009-08-19 23:18:40 PDT
Created
attachment 35186
[details]
Patch
Mark Rowe (bdash)
Comment 3
2009-08-19 23:54:56 PDT
Landed in
r47551
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug